US001 - Footer Content

--- a/dev/less/general.less
+++ b/dev/less/general.less
@@ -103,6 +103,9 @@ html body input {
   font-size: inherit;
   line-height: inherit;
 }
+.clearfix{
+  clear:both;
+}
 .medium,
 strong {
   font-family: "franklin-gothic-urw-n5", "franklin-gothic-urw", sans-serif;
