--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -146,6 +146,38 @@
         }
       }
     }
+    .footer-section {
+      width: 100%;
+      display: block;
+      .footer-content {
+        background-color: #04074A;
+        height: 30px;
+        width: 100%;
+        ul.footer-menu {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          overflow: hidden;
+          li {
+            float: left;         
+          }
+          li a {
+            display: block;
+            text-align: center;
+            color: #fff;            
+            padding: 5px 10px;
+            text-decoration: none;
+          }
+          li a:hover {
+            text-decoration: underline;
+          }
+        }
+        .copyrights .footer-txt {
+          color: #fff;
+          padding-top: 8px;
+        }
+      }
+    }
   }
 }
 /*# sourceMappingURL=style.min.css.map */
