US001 - Angular Routing

--- a/dev/less/general.less
+++ b/dev/less/general.less
@@ -189,6 +189,12 @@ input.ui-input-text {
 .floatRight {
   float: right;
 }
+.floatLeft {
+  float: left;
+}
+.paddingLR {
+  padding:0 10px;
+}
 ul.menu-bar,
 ul.menu-bar li ul {
   list-style-type: none;
