--- a/dev/less/main.less
+++ b/dev/less/main.less
@@ -3,6 +3,56 @@
     margin: 0 auto;
     background-color: #fff;
     padding: 0;
+    .header {
+      .side-top-menu {
+        font-size: 12px;
+        padding: 0;
+        padding-top:10px;
+        a {
+          color: #333;
+        }
+        a:hover {
+          text-decoration: none;
+        }
+        .user-profile {
+          height: 50px;
+          .user-icon {
+            background: url('../images/user-icon.png');
+            background-repeat: no-repeat;
+            padding-left: 45px;
+            padding-bottom: 40px;
+            background-position: 0px 5px;
+          }
+          .userid-txt {
+            top:15px;
+            position: relative;
+          }
+        }
+        .help-btn {
+          .help-icon {
+            background: url('../images/help-btn.png');
+            background-repeat: no-repeat;
+            height: 40px;
+            width: 40px;
+          }
+          .help-txt {
+            padding-left: 7px;
+            padding-top:5px;
+          }
+        }
+        .logout-btn {
+          .logout-icon {
+            background: url('../images/logout-btn.png');
+            background-repeat: no-repeat;
+            height: 40px;
+            width: 40px;
+          }
+          .logout-txt {
+            padding-top:5px;
+          }
+        }
+      }
+    }
    .login-section {
       background-color: #C0E6FE;
       padding: 10px;
@@ -69,6 +119,18 @@
       margin: 0 auto;
       display: table;
     }
+    .icon-plus .icon {
+      background: url(../images/more-plus.png);
+      background-repeat: no-repeat;
+      padding-left: 15px;
+      background-position: 0 2px;
+    }
+    .icon-minus .icon {
+      background: url(../images/more-minus.png);
+      background-repeat: no-repeat;
+      padding-left: 15px;
+      background-position: 0 2px;
+    }
     .formpage-topsection {
       background-color: #C0E6FE;
       height: 100px;
@@ -97,7 +159,11 @@
     }
     ul.menu-bar li ul li {
       padding: 10px 0;
-      font-size: 12px;
+      font-size: 14px;
+      padding-left: 10px;
+    }
+    ul.menu-bar li ul li:hover {
+      background-color: #04074A;
     }
     ul.menu-bar h3 {
       margin: 0;
@@ -106,9 +172,14 @@
       padding-left: 5px;
       font-size: 14px;
       font-weight: 600;
+      cursor: pointer;
     }
     ul.menu-bar li a {
       padding-left: 10px;
+    }
+    ul.menu-bar li a:hover {
+      color: #fff;
+      text-decoration: none;
     }
     .main-form {
       .left-side-form,
